--- a/source/css/magic_reform.css
+++ b/source/css/magic_reform.css
@@ -71,7 +71,7 @@
 
 /* 页脚footer##################################################################################################### */
 /* 渐变色滚动动画 */
-@-webkit-keyframes Gradient {
+/*@-webkit-keyframes Gradient {
     0% {
         background-position: 0 50%;
     }
@@ -128,6 +128,10 @@
 }
 #footer:before {
     background-color: rgba(0, 0, 0, 0);
+}*/
+
+#footer {
+    background: transparent !important;
 }
 
 
