--- a/source/css/magic_reform.css
+++ b/source/css/magic_reform.css
@@ -195,3 +195,7 @@
   color: #fff;
   background-color: #49b1f5;
 }
+
+
+/*maclight*/
+#article-container figure.highlight,#article-container pre{color:#a9a9a9;background:#f3f3f3}#article-container figure.highlight .highlight-tools{color:#a9a9a9;background:#eee}#article-container figure.highlight .gutter pre{color:#999;background:#f3f3f3}#article-container figure.highlight figcaption a{color:#f3f3f3!important}
